k8s/scalatimes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalatimes
  labels:
    app: scalatimes
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      name: scalatimes
      labels:
        app: scalatimes
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: scalatimes
        image: softwaremill/scalatimes:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /app/cache
            name: scalatimes-pv
      imagePullSecrets:
      - name: sml-docker-hub
      restartPolicy: Always
      volumes:
      - name: scalatimes-pv
        persistentVolumeClaim:
          claimName: scalatimes-pvc
  selector:
    matchLabels:
      app: scalatimes
