k8s/scalatimes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: scalatimes
spec:
  selector:
    app: scalatimes
  ports:
    - port: 3000
  type: NodePort
